Make reload and project tooling module native